<resources>
    <string name="app_name">OnlineShop</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="empty_string_error_message">Поле не должно быть пустым</string>
    <string name="invalid_email_error_message">Введен некорректный email</string>
    <string name="invalid_min_length_error_message">Несоответствует минимальному количеству символов</string>
    <string name="colorNameTitle">Color:</string>
    <string name="quantityTitle">Quantity</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="trade_by">Trade by</string>
    <string name="bata">bata</string>
    <string name="location">Location</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="avatar_image">avatar image</string>
    <string name="welcome_back">Welcome back</string>
    <string name="first_name">First name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="satria_adhi_pradana">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="text_sum">$ 1593</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="sign_in">Sign in</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
</resources>