<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.OnlineShop.FullscreenContainer"
    tools:context=".signin.ui.SignInFragment">

    <TextView
        android:id="@+id/titleLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/black_600"
        android:textSize="26sp"
        app:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.example.core.presenter.BaseCustomTextInputLayout
        android:id="@+id/firstNameLoginTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="43dp"
        app:boxBackgroundColor="@color/gray_200"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/gray_200"
        app:boxStrokeWidth="0dp"
        app:fontFamily="@font/montserrat_semibold"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLoginTextView">
        <com.example.core.presenter.BaseCustomTextInputEditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:gravity="center"
            android:hint="@string/first_name"
            android:padding="0dp"
            android:textColorHint="@color/gray_400"
            android:textSize="11sp"
            app:fontFamily="@font/montserrat_medium"
            app:hintAnimationEnabled="false" />
    </com.example.core.presenter.BaseCustomTextInputLayout>

    <com.example.core.presenter.BaseCustomTextInputLayout
        android:id="@+id/passwordTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="43dp"
        app:boxBackgroundColor="@color/gray_200"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/gray_200"
        app:boxStrokeWidth="0dp"
        app:passwordToggleEnabled="true"
        android:layout_gravity="center_vertical"
        app:fontFamily="@font/montserrat_semibold"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLoginTextInputLayout">

        <com.example.core.presenter.BaseCustomTextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:gravity="center"
            android:drawablePadding="-38dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textColorHint="@color/gray_400"
            android:textSize="11sp"
            app:fontFamily="@font/montserrat_medium"
            app:hintAnimationEnabled="false" />
    </com.example.core.presenter.BaseCustomTextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="@color/purple_700"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white_200"
        android:textSize="14sp"
        app:cornerRadius="15dp"
        app:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>