<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/toBackImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="34dp"
        android:background="@null"
        android:elevation="2dp"
        android:src="@drawable/ic_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/productImageCardView"
        android:layout_width="328dp"
        android:layout_height="279dp"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.onlineshop.signin.MyImageView
            android:id="@+id/productImage"
            android:layout_width="328dp"
            android:layout_height="279dp"
            android:scaleType="centerCrop"
            tools:background="@drawable/flash_sale_detail_img" />
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="42dp"
        android:layout_height="95dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/rounded_corner_gray_380_r14"
        android:elevation="2dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/productImageCardView"
        app:layout_constraintTop_toTopOf="@+id/productImageCardView">

        <ImageButton
            android:id="@+id/likeImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@null"
            android:src="@drawable/ic_like_15_13" />

        <ImageButton
            android:id="@+id/dividerImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@null"
            android:src="@drawable/ic_divider_12_1" />

        <ImageButton
            android:id="@+id/shareImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@null"
            android:src="@drawable/ic_share_16_18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="76dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/productImageCardView"
        app:layout_constraintTop_toBottomOf="@+id/productImageCardView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productImagesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_product_image" />
    </LinearLayout>


    <TextView
        android:id="@+id/nameProductTextView"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="101dp"
        android:textColor="@color/black_600"
        android:textSize="17sp"
        app:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImageCardView"
        tools:text="New balance Sneakers" />

    <TextView
        android:id="@+id/priceProductTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/black_600"
        android:textSize="17sp"
        app:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImageCardView"
        tools:text="$ 22,50" />

    <TextView
        android:id="@+id/descriptionProductTextView"
        android:layout_width="231dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:elevation="2dp"
        android:textColor="@color/gray_500"
        android:textSize="9sp"
        app:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameProductTextView"
        tools:text="Features waterproof, fire, air resistant shoes. all changed when the country of fire attacked" />

    <LinearLayout
        android:id="@+id/reviewsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/productImageCardView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionProductTextView">

        <ImageButton
            android:id="@+id/starImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@null"
            android:src="@drawable/ic_star" />

        <TextView
            android:id="@+id/ratingProductTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:textColor="@color/black_600"
            android:textSize="9sp"
            app:fontFamily="@font/poppins_semibold"
            tools:text="3.9" />

        <TextView
            android:id="@+id/reviewsProductTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:textColor="@color/gray_500"
            android:textSize="9sp"
            app:fontFamily="@font/poppins"
            tools:text="(4000 reviews)" />
    </LinearLayout>

    <TextView
        android:id="@+id/colorProductTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/colorNameTitle"
        android:textColor="@color/gray_450"
        android:textSize="10sp"
        app:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewsLinearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/colorProductImagesRecyclerView"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="76dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/productImageCardView"
        app:layout_constraintTop_toBottomOf="@+id/colorProductTextView"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_color_product_detail" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-45dp"
        android:elevation="1dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorProductImagesRecyclerView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/quantityProductTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:elevation="1dp"
        android:text="@string/quantityTitle"
        android:textColor="@color/gray_450"
        android:textSize="10sp"
        app:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialCardView" />

    <ImageButton
        android:id="@+id/reduceQuantityImageButton"
        android:layout_width="38dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/rounded_corner_purple_800_r8"
        android:elevation="1dp"
        android:src="@drawable/ic_reduce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialCardView" />

    <ImageButton
        android:id="@+id/addQuantityImageButton"
        android:layout_width="38dp"
        android:layout_height="22dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/rounded_corner_purple_800_r8"
        android:elevation="1dp"
        android:src="@drawable/ic_add_7"
        app:layout_constraintStart_toEndOf="@+id/reduceQuantityImageButton"
        app:layout_constraintTop_toTopOf="@+id/materialCardView"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/addToCardLinearLayout"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/rounded_corner_purple_800_r15"
        android:elevation="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/materialCardView">

        <TextView
            android:id="@+id/totalProductTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:gravity="center"
            android:textColor="@color/purple_250"
            android:textSize="8sp"
            app:fontFamily="@font/poppins_semibold"
            tools:text="#2,500" />

        <TextView
            android:id="@+id/addToCardProductTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textSize="8sp"
            app:fontFamily="@font/poppins_semibold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>